# adventure

./: .gitignore  README.md  index.html  package-lock.json  package.json
js/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/wasm/: Cargo.toml
src/wasm/src/: common.rs  game.rs  lib.rs
static/: main.css
